* Added an explicit reference to Apparatist itself.

--- a/StateTreeApparatist.uplugin
+++ b/StateTreeApparatist.uplugin
@@ -28,6 +28,10 @@
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/66d674e3675f44c1a1e619de8adcef71"
 		},
 		{
+			"Name": "Apparatist",
+			"Enabled": true
+		},
+		{
 			"Name": "StateTree",
 			"Enabled": true
 		}
